[gd_scene load_steps=8 format=3 uid="uid://bcg4t6806rtns"]

[ext_resource type="Theme" uid="uid://xycay2vr14mx" path="res://scenes/main_theme.tres" id="1_0rlay"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="2_qlo1c"]
[ext_resource type="Texture2D" uid="uid://o50coucytngs" path="res://assets/images/title_screen.png" id="3_wmt70"]
[ext_resource type="Texture2D" uid="uid://r4xgnsx6duwi" path="res://assets/images/title.png" id="4_q6jy4"]
[ext_resource type="AudioStream" uid="uid://cci66yvb4oarx" path="res://assets/sounds/music/loading_sound.wav" id="5_pda6g"]
[ext_resource type="PackedScene" uid="uid://273jjweunsd3" path="res://scenes/transition_manager.tscn" id="9_m8x2h"]

[sub_resource type="Theme" id="Theme_eplge"]
default_font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0rlay")
script = ExtResource("2_qlo1c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wmt70")
expand_mode = 2
stretch_mode = 4

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -800.0
offset_right = 800.0
offset_bottom = 900.0
grow_horizontal = 2
pivot_offset = Vector2(800, 0)
texture = ExtResource("4_q6jy4")
expand_mode = 5

[node name="Main" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_eplge")

[node name="PanelContainer" type="PanelContainer" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -414.0
offset_right = 150.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/PanelContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Continue" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TransitionManager" parent="." instance=ExtResource("9_m8x2h")]

[node name="AudioStreamPlayer" parent="TransitionManager" index="2"]
stream = ExtResource("5_pda6g")
bus = &"Music"

[connection signal="pressed" from="Main/PanelContainer/VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="transitioned" from="TransitionManager" to="." method="_on_transition_manager_transitioned"]

[editable path="TransitionManager"]
